// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button snapshot > adornments > matches snapshot with both adornments 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-y8o9e2-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-icon MuiButton-startIcon css-yqfw0v-MuiButton-startIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
        data-testid="AddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
        />
      </svg>
    </span>
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      With Both Icons
    </span>
    <span
      class="MuiButton-icon MuiButton-endIcon css-ixtleg-MuiButton-endIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
        data-testid="ArrowForwardIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Button snapshot > adornments > matches snapshot with endAdornment 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-y8o9e2-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      With End Icon
    </span>
    <span
      class="MuiButton-icon MuiButton-endIcon css-ixtleg-MuiButton-endIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
        data-testid="ArrowForwardIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Button snapshot > adornments > matches snapshot with startAdornment 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-y8o9e2-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-icon MuiButton-startIcon css-yqfw0v-MuiButton-startIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
        data-testid="AddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
        />
      </svg>
    </span>
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      With Start Icon
    </span>
  </button>
</div>
`;

exports[`Button snapshot > sizes > matches snapshot with LG size 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-1jbdb3p-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-1v0c3aa"
    >
      Large
    </span>
  </button>
</div>
`;

exports[`Button snapshot > sizes > matches snapshot with MD size 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-y8o9e2-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Medium
    </span>
  </button>
</div>
`;

exports[`Button snapshot > sizes > matches snapshot with SM size 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-mm3zbo-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-18q6ter"
    >
      Small
    </span>
  </button>
</div>
`;

exports[`Button snapshot > sizes > matches snapshot with XL size 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-plnfi5-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-1v0c3aa"
    >
      Extra Large
    </span>
  </button>
</div>
`;

exports[`Button snapshot > states > matches snapshot when disabled 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-y8o9e2-MuiButtonBase-root-MuiButton-root"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Disabled Button
    </span>
  </button>
</div>
`;

exports[`Button snapshot > states > matches snapshot when fullWidth 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-fullWidth css-yj0th5-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Full Width Button
    </span>
  </button>
</div>
`;

exports[`Button snapshot > states > matches snapshot when loading 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-loading MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-loadingPositionStart Mui-disabled MuiButton-root MuiButton-loading MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-loadingPositionStart css-y8o9e2-MuiButtonBase-root-MuiButton-root"
    disabled=""
    id="_r_t_"
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-icon MuiButton-startIcon css-11vne0n-MuiButton-startIcon"
    >
      <span
        class="css-1hr99lv-MuiButton-loadingIconPlaceholder"
      />
    </span>
    <span
      class="MuiButton-loadingWrapper"
      style="display: contents;"
    >
      <span
        class="MuiButton-loadingIndicator css-19swvv3-MuiButton-loadingIndicator"
      >
        <span
          aria-labelledby="_r_t_"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorInherit css-gxw4l9-MuiCircularProgress-root"
          role="progressbar"
          style="width: 16px; height: 16px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Loading Button
    </span>
  </button>
</div>
`;

exports[`Button snapshot > variants > matches snapshot with alphaDark variant 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-1pmi0s-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Alpha Dark
    </span>
  </button>
</div>
`;

exports[`Button snapshot > variants > matches snapshot with alphaLight variant 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-v0pugf-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Alpha Light
    </span>
  </button>
</div>
`;

exports[`Button snapshot > variants > matches snapshot with borderless variant 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-1rh1drq-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Borderless
    </span>
  </button>
</div>
`;

exports[`Button snapshot > variants > matches snapshot with default variant 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-yfv5jj-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Default
    </span>
  </button>
</div>
`;

exports[`Button snapshot > variants > matches snapshot with disabled variant 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-ccq63x-MuiButtonBase-root-MuiButton-root"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Button snapshot > variants > matches snapshot with lightBorder variant 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-eodrri-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Light Border
    </span>
  </button>
</div>
`;

exports[`Button snapshot > variants > matches snapshot with primary variant 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-y8o9e2-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Primary
    </span>
  </button>
</div>
`;

exports[`Button snapshot > variants > matches snapshot with secondary variant 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-jot4dq-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Secondary
    </span>
  </button>
</div>
`;

exports[`Button snapshot > variants > matches snapshot with success variant 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary css-b8wh4x-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-buttonLabel css-140sd4w"
    >
      Success
    </span>
  </button>
</div>
`;
